# freqhole

./: .gitignore  Cargo.toml  README.md
app-solid/: package.json
app-solid/public/: freqhole.player.config.json
app-solid/src/: Controls.tsx  FlyoutMenu.tsx  FlyoutMenuProvider.tsx  Player.css  Player.tsx  PlaylistHeader.tsx  Sidebar.css  Sidebar.tsx  context.tsx  useImageBlob.ts
app-solid/src/web-components/: MyComponent.tsx  main.ts
app-tauri/: tauri.conf.json
cli/: Cargo.toml
cli/src/: file_walker.rs  html_packer.rs  main.rs
docs/: CNAME  README.md
pwa/: Cargo.toml  build.sh  index.html  manifest.json  sw.js
pwa/examples/: hyperapp.html  index.html  infinitescroll.html  infinitescroll.js  some-loading-thing.html
pwa/examples/i/: drag-and-drop-iguess.html  index.html  notbad-now-with-more-stuff.html  notbad.html  seed_songs.json  seed_songs0.json
pwa/src/: lib.rs
server/: Cargo.toml
server/examples/: dexie_sync_server.rs
server/src/: main.rs
shared/: Cargo.toml
shared/db/: README.md  docker-compose.yml  makefile  package-lock.json  package.json  zod_schemas.ts
shared/db/schema/: 1749530140_create_songs.sql  1749530181_create_media_blobs.sql  1749530218_create_playlists.sql  1749530244_playlist_items.sql  1749530244_playlist_songs.sql  1749574909_create_config.sql  1749582703_create_favz.sql  init.sql  seeds.sql
shared/electric/: config.ts  electric-resource.ts
shared/src/: lib.rs  models.rs  rust_store.rs  store.rs  wasm_store.rs
tauri/: README.md  package-lock.json  package.json  tsconfig.json  vite.wc.config.ts
tauri/src/: App.css  App.tsx  BlobImage.tsx  Controls.css  Controls.tsx  FlyoutMenu.css  FlyoutMenu.tsx  FlyoutMenuProvider.tsx  Player.css  Player.tsx  PlaylistHeader.css  Sidebar.css  Sidebar.tsx  SongList.css  SongList.tsx  context.tsx  create-live-query.ts  db.ts  usePlayer.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
