[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = { version = "0.21", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
lofty = "0.22.4"

[dependencies.shared]
path = "../shared"
features = ["rust"]
default-features = false
