[package]
name = "pwa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"


# shared = { path = "../shared", features = ["wasm"] }
[dependencies.shared]
path = "../shared"
features = ["wasm"]
default-features = false
