[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1.17"
sled = "0.34.7"
warp = "0.3"
mime_guess = "2.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"

[dependencies.shared]
path = "../shared"
default-features = false
features = ["rust"]
