[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
sled = "0.34"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
async-trait = "0.1.88"
idb = "0.6.4"
serde-wasm-bindgen = "0.6.5"

[features]
default = []
rust = []
wasm = []
